--- a/index.html
+++ b/index.html
@@ -6,24 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-        /* .container {
-            display: grid;
-            grid-template-columns:repeat(auto-fill,minmax(350px,1fr)) ;
-            padding: 10px;
-            margin: 10px;
-            border: 2px solid red;
-            gap: 10px;
-        }
-        .image{
-            width:100%;
-            height:250px;
-            display:block;
-            object-fit:contain;
-        }
-        .item {
-            border: 2px solid green;
-            overflow: hidden;
-        } */
         .container {
             display: grid;
             grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
@@ -66,19 +48,42 @@
             white-space: nowrap;
 
         }
-        input,button{
-            text-align:center;
-            padding:10px;
+
+        input,
+        button {
+            text-align: center;
+            padding: 10px;
         }
-        .input{
-            display:grid;
-            width:100%;
+
+        .input {
+            display: grid;
+            width: 100%;
             justify-content: center;
+        }
+
+        .loader {
+            width: 120px;
+            height: 20px;
+            -webkit-mask: linear-gradient(90deg, #000 70%, #0000 0) 0/20%;
+            background:
+                linear-gradient(#000 0 0) 0/0% no-repeat #ddd;
+            animation: l4 2s infinite steps(6);
+            position: absolute;
+            left: 50%;
+            top: 50%;
+            transform: translate(-50%, -50%);
+        }
+
+        @keyframes l4 {
+            100% {
+                background-size: 120%
+            }
         }
     </style>
 </head>
 
 <body>
+    <div class="loader" id="loader"></div>
     <div class="input">
         <input type="text" id="title" placeholder="title"><br><br>
         <input type="text" id="description" placeholder="description"><br><br>
@@ -88,17 +93,10 @@
     </div>
     <br>
     <div id="container" class="container"></div>
-   
+
     <script src="./index.js">
 
     </script>
 </body>
 
 </html>
-
-
-
-
-
-
-
